--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </div>
         <div class="hero-images">
             <div class="hero-image-one">
-                <img src="/resources//img/home-img.svg" />
+                <img src="/resources/img/home-img.svg" />
             </div>
             <div class="hero-image-two">
-                <img src="/resources//img/home-img2.svg" />
+                <img src="/resources/img/home-img2.svg" />
             </div>
         </div>
     </header>
@@ -251,16 +251,16 @@
             <br>
             <div class="row news-item">
                 <div class="col span-1-of-4">
-                    <img src="/resources//img//mest.svg" />
+                    <img src="/resources/img/mest.svg" />
                 </div>
                 <div class="col span-1-of-4">
-                    <img src="/resources//img//mest.svg" />
+                    <img src="/resources/img/mest.svg" />
                 </div>
                 <div class="col span-1-of-4">
-                    <img src="/resources//img//mest.svg" />
+                    <img src="/resources/img/mest.svg" />
                 </div>
                 <div class="col span-1-of-4">
-                    <img src="/resources//img//mest.svg" />
+                    <img src="/resources/img/mest.svg" />
                 </div>
             </div>
         </div>
