adding media queries

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Cofundie</title>
 
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.mobile.css">
     <link rel="stylesheet" type="text/css" href="resources/css/grid.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap" rel="stylesheet">
 </head>
